docs: add Result TS demo

--- a/components/result/demo/403.md
+++ b/components/result/demo/403.md
@@ -13,16 +13,18 @@ title:
 
 you are not authorized to access this page.
 
-```jsx
+```tsx
+import React from 'react';
 import { Result, Button } from 'antd';
 
-ReactDOM.render(
+const App = () => (
   <Result
     status="403"
     title="403"
     subTitle="Sorry, you are not authorized to access this page."
     extra={<Button type="primary">Back Home</Button>}
-  />,
-  mountNode,
+  />
 );
+
+ReactDOM.render(<App />, mountNode);
 ```
