--- a/components/result/demo/404.md
+++ b/components/result/demo/404.md
@@ -13,16 +13,18 @@ title:
 
 The page you visited does not exist.
 
-```jsx
+```tsx
+import React from 'react';
 import { Result, Button } from 'antd';
 
-ReactDOM.render(
+const App = () => (
   <Result
     status="404"
     title="404"
     subTitle="Sorry, the page you visited does not exist."
     extra={<Button type="primary">Back Home</Button>}
-  />,
-  mountNode,
+  />
 );
+
+ReactDOM.render(<App />, mountNode);
 ```
