--- a/components/result/demo/500.md
+++ b/components/result/demo/500.md
@@ -13,16 +13,18 @@ title:
 
 Something went wrong on server.
 
-```jsx
+```tsx
+import React from 'react';
 import { Result, Button } from 'antd';
 
-ReactDOM.render(
+const App = () => (
   <Result
     status="500"
     title="500"
     subTitle="Sorry, something went wrong."
     extra={<Button type="primary">Back Home</Button>}
-  />,
-  mountNode,
+  />
 );
+
+ReactDOM.render(<App />, mountNode);
 ```
